# deep-paper

./: .gitignore  CLAUDE.md  README.md  TODO  backend.Dockerfile  frontend.Dockerfile  niteshift-setup.sh  railway.json
.bifrost/: config.json  rules
.github/workflows/: frontend-lint.yml  python-static-analysis.yml  python-tests.yml
backend/: .env.example  Dockerfile  docker-compose.yaml  mypy.ini  pyproject.toml  railway.toml
backend/app/: celery_app.py  celery_worker.py  cli.py  config.py  main.py  prompts.py
backend/app/agents/: dd_llmobs.py  explore.py  observability.py  otel_llmobs.py  researcher.py  summarizer.py  utils.py
backend/app/agents/deep_research/: __init__.py  agent.py  message.py  tools.py  web_tools.py
backend/app/data/: annotation_ids.txt  ids.txt  queries.txt
backend/app/data/qdrant/: meta.json
backend/app/data/qdrant/collection/papers/: storage.sqlite
backend/app/models/: latex.py  paper.py  research.py
backend/app/pipeline/: chunk.py  chunking.py  embedding.py  ids.txt  indexer.py  vector_store.py
backend/app/routers/: indexing.py  research.py
backend/app/tasks/: indexer.py  indexing.py
backend/app/tests/: test_researcher.py
backend/app/worker/: celery_worker.py  railway.toml
frontend/: next.config.ts  package-lock.json  package.json  railway.toml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/deep-research/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/paper/[id]/: page.tsx
frontend/src/components/: DeepResearchView.tsx  ExploreView.tsx  QuestionInput.tsx  ResearchContainer.tsx  ResearchSidebar.tsx  ResearchStream.tsx  ResearchStreamItem.tsx  Researcher.tsx  TopicDetail.tsx  TopicList.tsx
frontend/src/components/lib/: modelOptions.ts  utils.ts
frontend/src/components/types/: index.ts
frontend/src/components/ui/: button.tsx  card.tsx  markdown.tsx  select.tsx  tabs.tsx  tooltip.tsx
frontend/src/components/utils/: EventSourceManager.tsx
