[project]
name = "deep_paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bibtexparser>=1.4.3",
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-text-splitters>=0.3.6",
    "litellm[proxy]>=1.61.20",
    "pylatexenc>=3.0a32",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "smolagents[transformers]>=1.9.2",
    "sse-starlette>=2.2.1",
    "pymupdf>=1.25.3",
    "colorama>=0.4.6",
    "qdrant-client>=1.13.3",
    "ddtrace>=3.2.1",
    "tiktoken>=0.9.0",
    "modal>=0.73.92",
    "openai>=1.65.2",
    "pydantic>=2.10.6",
    "torch>=2.6.0",
    "google-cloud-aiplatform>=1.83.0",
    "browser-use>=0.1.40",
    "langchain-google-vertexai>=2.0.15",
    "langchain-anthropic>=0.3.3",
    "braintrust>=0.0.190",
    "autoevals>=0.0.123",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "traceloop-sdk>=0.38.12",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
